--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="styles/style.css">
+  <!-- fontawesome font -->
   <script src="https://kit.fontawesome.com/a81368914c.js"></script>
+  <!-- google font -->
   <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700&display=swap" rel="stylesheet">
   <title>Nike Zoom</title>
 </head>
@@ -21,16 +23,63 @@
           <div class="gradient" color="orange"></div>
           <div class="gradient" color="black"></div>
         </div>
+
         <h1 class="nike">nike</h1>
         <img src="img/logo.png" alt="Nike Logo" class="logo">
         <a href="#" class="share"><i class="fas fa-share-alt"></i></a>
 
-        <img src="img/blue.png" alt="Blue Shoe" class="shoe">
-        <img src="img/red.png" alt="Red Shoe" class="shoe">
-        <img src="img/green.png" alt="Green Shoe" class="shoe">
-        <img src="img/orange.png" alt="Orange Shoe" class="shoe">
-        <img src="img/black.png" alt="Black Shoe" class="shoe">
+        <img src="img/blue.png" alt="Blue Shoe" class="shoe" color="blue">
+        <img src="img/red.png" alt="Red Shoe" class="shoe" color="red">
+        <img src="img/green.png" alt="Green Shoe" class="shoe" color="green">
+        <img src="img/orange.png" alt="Orange Shoe" class="shoe" color="orange">
+        <img src="img/black.png" alt="Black Shoe" class="shoe" color="black">
 
+      </div>
+      <!-- shoeBackground -->
+
+      <div class="info">
+        <div class="shoeName">
+          <div>
+            <h1 class="big">Nike Zoom KD 21</h1>
+            <span class="new">new</span>
+          </div>
+          <h3 class="small">Men's running shoes</h3>
+        </div>
+        <div class="description">
+          <h3 class="title">Product Info</h3>
+          <p class="text">lipsum </p>
+        </div>
+        <!-- description -->
+        <div class="color-container">
+          <h3 class="title">Color</h3>
+          <div class="colors">
+            <span class="color" color="blue"></span>
+            <span class="color" color="red"></span>
+            <span class="color" color="green"></span>
+            <span class="color" color="orange"></span>
+            <span class="color" color="black"></span>
+          </div>
+        </div>
+        <!-- color-container -->
+        <div class="size-container">
+          <h3 class="title">Size</h3>
+          <div class="sizes">
+            <span class="size">7</span>
+            <span class="size">7.5</span>
+            <span class="size">8.5</span>
+            <span class="size">9</span>
+            <span class="size">9.5</span>
+          </div>
+        </div>
+        <!-- size-container -->
+        <div class="buy-price">
+          <a href="#" class="buy"><i class="fas fa-shopping-cart"></i>Add to card</a>
+          <div class="price">
+            <i class="fas fa-dollar-sign"></i>
+            <h1>189.99</h1>
+          </div>
+        </div>
+        <!-- buy-price -->
       </div>
     </div>
   </div>
