--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <img src="img/logo.png" alt="Nike Logo" class="logo">
         <a href="#" class="share"><i class="fas fa-share-alt"></i></a>
 
-        <img src="img/blue.png" alt="Blue Shoe" class="shoe" color="blue">
+        <img src="img/blue.png" alt="Blue Shoe" class="shoe show" color="blue">
         <img src="img/red.png" alt="Red Shoe" class="shoe" color="red">
         <img src="img/green.png" alt="Green Shoe" class="shoe" color="green">
         <img src="img/orange.png" alt="Orange Shoe" class="shoe" color="orange">
