--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-  <div class="container">
+  <main class="container">
     <div class="card">
       <div class="shoeBackground">
         <div class="gradients">
@@ -82,7 +82,9 @@
         <!-- buy-price -->
       </div>
     </div>
-  </div>
+  </main>
+
+  <script src="js/app.js"></script>
 
 </body>
 
