--- a/index.html
+++ b/index.html
@@ -15,24 +15,24 @@
 <body>
   <main class="container">
     <div class="card">
+
       <div class="shoeBackground">
         <div class="gradients">
-          <div class="gradient" color="blue"></div>
+          <div class="gradient second" color="blue"></div>
           <div class="gradient" color="red"></div>
           <div class="gradient" color="green"></div>
           <div class="gradient" color="orange"></div>
           <div class="gradient" color="black"></div>
         </div>
-
         <h1 class="nike">nike</h1>
-        <img src="img/logo.png" alt="Nike Logo" class="logo">
+        <img src="img/logo.png" alt="" class="logo">
         <a href="#" class="share"><i class="fas fa-share-alt"></i></a>
 
-        <img src="img/blue.png" alt="Blue Shoe" class="shoe show" color="blue">
-        <img src="img/red.png" alt="Red Shoe" class="shoe" color="red">
-        <img src="img/green.png" alt="Green Shoe" class="shoe" color="green">
-        <img src="img/orange.png" alt="Orange Shoe" class="shoe" color="orange">
-        <img src="img/black.png" alt="Black Shoe" class="shoe" color="black">
+        <img src="img/blue.png" alt="" class="shoe show" color="blue">
+        <img src="img/red.png" alt="" class="shoe" color="red">
+        <img src="img/green.png" alt="" class="shoe" color="green">
+        <img src="img/orange.png" alt="" class="shoe" color="orange">
+        <img src="img/black.png" alt="" class="shoe" color="black">
 
       </div>
       <!-- shoeBackground -->
@@ -40,35 +40,37 @@
       <div class="info">
         <div class="shoeName">
           <div>
-            <h1 class="big">Nike Zoom KD 21</h1>
+            <h1 class="big">Nike Zoom KD 12</h1>
             <span class="new">new</span>
           </div>
           <h3 class="small">Men's running shoes</h3>
         </div>
+        <!-- shoeName -->
         <div class="description">
           <h3 class="title">Product Info</h3>
-          <p class="text">lipsum </p>
+          <p class="text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
+            been the industry's.</p>
         </div>
         <!-- description -->
         <div class="color-container">
           <h3 class="title">Color</h3>
           <div class="colors">
-            <span class="color" color="blue"></span>
-            <span class="color" color="red"></span>
-            <span class="color" color="green"></span>
-            <span class="color" color="orange"></span>
-            <span class="color" color="black"></span>
+            <span class="color active" primary="#2175f5" color="blue"></span>
+            <span class="color" primary="#f84848" color="red"></span>
+            <span class="color" primary="#29b864" color="green"></span>
+            <span class="color" primary="#ff5521" color="orange"></span>
+            <span class="color" primary="#444" color="black"></span>
           </div>
         </div>
         <!-- color-container -->
         <div class="size-container">
-          <h3 class="title">Size</h3>
+          <h3 class="title">size</h3>
           <div class="sizes">
             <span class="size">7</span>
-            <span class="size">7.5</span>
-            <span class="size">8.5</span>
-            <span class="size">9</span>
-            <span class="size">9.5</span>
+            <span class="size">8</span>
+            <span class="size active">9</span>
+            <span class="size">10</span>
+            <span class="size">11</span>
           </div>
         </div>
         <!-- size-container -->
@@ -79,8 +81,8 @@
             <h1>189.99</h1>
           </div>
         </div>
-        <!-- buy-price -->
       </div>
+      <!-- info -->
     </div>
   </main>
 
